--- a/styles/style.css
+++ b/styles/style.css
@@ -85,4 +85,17 @@ body { background: skyblue;}
 #cats a:hover{ color: orange; font-weight: bolder; text-decoration: underline;}
 
 
+#product_box{width: 700px; text-align: center; margin-left: auto; margin-bottom: 10px;}
+
+
+#single_product {float: left; margin-left: auto; padding: 10px;}
+
+
+#single_product img {border:2px solid black;}
+
+
+#shoping_cart { width: 800px; height: 50px; background: black; color: white;}
+
+
 #footer{ width: 1000px; height: 100px; float: center; background: #6495ED; clear:both; margin: auto;}
+
